# printed

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/source/: conf.py  index.md  installation.md
src/printed/: __main__.py  formatting.py  material.py  path.py  print.py  schema.py
src/printed/cli/: __init__.py  base.py
src/printed/web/: dependencies.py  main.py  prints.py  routes.py
src/printed/web/static/: app.css
src/printed/web/templates/: base.html  header.html  index.html  index.page.html  index.table.html  macros.html  material.html  material.page.html  print.html  print.page.html
tests/: cli.py  conftest.py  factories.py
